--- a/app/src/main/res/drawable/circle_bg.xml
+++ b/app/src/main/res/drawable/circle_bg.xml
@@ -2,7 +2,7 @@
 <shape android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/brand_color"/>
 
 
 </shape>
