--- a/app/src/main/res/layout/fragment_users_info.xml
+++ b/app/src/main/res/layout/fragment_users_info.xml
@@ -139,7 +139,7 @@
 
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/password_et"
+                    android:id="@+id/phoneNumber_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/textinput_bg"
