--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -117,6 +116,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:riv_corner_radius="12dp" />
+
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/image2"
                 android:layout_width="260dp"
@@ -133,8 +133,7 @@
                 app:layout_constraintStart_toEndOf="@id/image1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:riv_corner_radius="12dp" />
-            
-            
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </HorizontalScrollView>
@@ -162,24 +161,25 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addProject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="12dp"
         android:layout_marginBottom="22dp"
         android:backgroundTint="@color/brand_color"
         android:src="@drawable/baseline_add_24"
-        android:layout_marginEnd="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/lastName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jones"
+        android:layout_marginStart="7dp"
         android:fontFamily="@font/poppins_medium"
+        android:text="Jones"
         android:textColor="@color/black"
         android:textSize="17sp"
-        android:layout_marginStart="7dp"
         app:layout_constraintBottom_toBottomOf="@+id/greetingsName"
         app:layout_constraintStart_toEndOf="@+id/greetingsName"
         app:layout_constraintTop_toTopOf="@+id/greetingsName" />
